# Meta

./: .dockerignore  .env.example  .gitignore  .openenvignore  Dockerfile  README.md  allfiles.txt  check_dataset.py  env.py  grader.py  inference.py  macinference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  search_ranking_env.py  test_env.py  test_grader.py  test_scores.py  test_search_ranking_env.py  test_tasks.py  train_model.py
search-ranking-env/: .dockerignore  .gitignore  Dockerfile  README.md  grader.py  inference.py  models.py  openenv.yaml  test_env.py  test_grader.py  test_models.py  test_tasks.py
search-ranking-env/checkpoints/model/eval/: CrossEncoderClassificationEvaluator_ms-marco-dev_results.csv
search-ranking-env/checkpoints/model_1/eval/: CrossEncoderClassificationEvaluator_ms-marco-dev_results.csv
search-ranking-env/trained_msmarco_model/: README.md  config.json
search-ranking-env/trained_msmarco_model/eval/: CrossEncoderClassificationEvaluator_ms-marco-dev_results.csv
server/: app.py  env.py  grader.py  models.py
server/tasks/: easy.py  hard.py  medium.py
tasks/: __init__.py
