[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "search-ranking-env"
version = "1.0.0"
description = "OpenEnv Search Ranking Optimization Environment"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Jabbastin Akash" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai"
]

[tool.setuptools]
packages = ["."]