[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "search-ranking-env"
version = "1.0.0"
description = "OpenEnv Search Ranking Optimization Environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jabbastin Akash" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai>=2.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server", "server.tasks"]